--- a/src/views/ListView.hbs
+++ b/src/views/ListView.hbs
@@ -16,12 +16,12 @@
 		{{# each pokemon }}
 		<tr pokemon-id="{{ id }}">
 			<td>
-				<a href="http://localhost:3000/pokemon/{{ id }}">
-					{{ name.en }}
+				<a href="http://localhost:3000/pokemon/{{ id }}" class="{{ name }}">
+					{{ name }}
 				</a>
 			</td>
 			<td>
-				{{ type.en }}
+				{{ type }}
 			</td>
 		</tr>
 		{{/each}}
